# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api
 definitions:
-  types.Widget:
+  types.Document:
     properties:
       created_at:
         type: string
@@ -19,9 +19,9 @@ info:
   title: gorag
   version: "1.0"
 paths:
-  /widgets:
+  /documents:
     get:
-      description: Get all available widgets
+      description: Get all available documents
       produces:
       - application/json
       responses:
@@ -29,7 +29,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/types.Widget'
+              $ref: '#/definitions/types.Document'
             type: array
         "500":
           description: Internal Server Error
@@ -37,20 +37,20 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Get all widgets
+      summary: Get all documents
       tags:
-      - Widgets
+      - documents
     post:
       consumes:
       - application/json
-      description: Create a new widget
+      description: Create a new document
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/types.Widget'
+            $ref: '#/definitions/types.Document'
         "400":
           description: Bad Request
           schema:
@@ -63,14 +63,14 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Create a new Widget
+      summary: Create a new document
       tags:
-      - Widgets
-  /widgets/{id}:
+      - documents
+  /documents/{id}:
     delete:
-      description: Delete a widget by its ID
+      description: Delete a document by its ID
       parameters:
-      - description: Widget ID
+      - description: document ID
         in: path
         name: id
         required: true
@@ -90,13 +90,13 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Delete a widget
+      summary: Delete a document
       tags:
-      - Widgets
+      - documents
     get:
-      description: Get a widget by its ID
+      description: Get a document by its ID
       parameters:
-      - description: Widget ID
+      - description: document ID
         in: path
         name: id
         required: true
@@ -107,7 +107,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.Widget'
+            $ref: '#/definitions/types.Document'
         "404":
           description: Not Found
           schema:
@@ -120,15 +120,15 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Get a widget by ID
+      summary: Get a document by ID
       tags:
-      - Widgets
+      - documents
     put:
       consumes:
       - application/json
-      description: Update an existing widget
+      description: Update an existing document
       parameters:
-      - description: Widget ID
+      - description: document ID
         in: path
         name: id
         required: true
@@ -139,7 +139,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.Widget'
+            $ref: '#/definitions/types.Document'
         "400":
           description: Bad Request
           schema:
@@ -158,12 +158,7 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Update a widget
+      summary: Update a document
       tags:
-      - Widgets
-securityDefinitions:
-  BearerAuth:
-    in: header
-    name: Authorization
-    type: apiKey
+      - documents
 swagger: "2.0"
